[package]
edition = "2021"
name = "indexer"
publish = false
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
async-std = { workspace = true } 
async-stream = { workspace = true }
borsh = {workspace = true}
borsh-derive = {workspace = true}
chrono = {workspace = true}
common = { workspace = true }
dao = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
log = { workspace = true } 
itertools = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-stream = { workspace = true }
tokio-retry = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }