[package]
edition = "2021"
name = "tests"
publish = false
version = "0.1.0"

[dev-dependencies]
anyhow = {workspace = true}
api = {workspace = true}
borsh = {workspace = true}
chrono = {workspace = true}
common = {workspace = true}
dao = {workspace = true}
env_logger = {workspace = true}
figment = {workspace = true}
flatbuffers = {workspace = true}
function_name = {workspace = true}
futures-util = {workspace = true}
insta = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
migration = {workspace = true}
indexer = {workspace = true}
once_cell = {workspace = true}
rstest = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serial_test = {workspace = true}
solana-account-decoder = {workspace = true}
solana-client = {workspace = true}
solana-sdk = {workspace = true}
solana-transaction-status = {workspace = true}
sqlx = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tracing-subscriber = {workspace = true}
